--- a/client/main.css
+++ b/client/main.css
@@ -2,3 +2,9 @@ body {
   background-color: #3D4147;
   color: #d9d9d9;
 }
+nav {
+  background-color: #04daf2 !important;
+}
+input {
+  color: #d9d9d9 !important;
+}
