--- a/client/main.css
+++ b/client/main.css
@@ -3,8 +3,18 @@ body {
   color: #d9d9d9;
 }
 nav {
-  background-color: #04daf2 !important;
+  background-color: #4fc3f7 !important;
 }
 input {
   color: #d9d9d9 !important;
+}
+.logo {
+  height: 50px;
+  margin-top: 7px;
+}
+.collapsible-body {
+  border: none !important;
+}
+.collapsible-header {
+  border: none !important;
 }
